# my-yoonie

v2/: .env.example  .gitignore  README.md  pyproject.toml
v2/agents/: advisor.md  advisor.yaml  code_reviewer.md  code_reviewer.yaml  debugger_engineer.md  debugger_engineer.yaml  devops_engineer.md  devops_engineer.yaml  product_manager.md  product_manager.yaml  qa_engineer.md  qa_engineer.yaml  software_engineer.md  software_engineer.yaml  system_architect.md  system_architect.yaml
v2/config/: harness.yaml  models.yaml
v2/harness/: __init__.py  __main__.py  cli.py  context.py  conversation.py  hooks.py  memory.py  pipeline.py  ralph.py  registry.py  report.py  runner.py  state.py  status.py
v2/harness-spec/docs/: claude-code-implementation-prompt.md  core-goals.md  folder-structure.md  implementation-priorities.md  original-uploaded-spec.md  status-schema.md
v2/harness-spec/docs/agents/: code_reviewer.md  devops_engineer.md  product_manager.md  qa_engineer.md  recovery_engineer.md  software_engineer.md  system_architect.md
v2/harness-spec/docs/context/: context-management.md  context-update-protocol.md
v2/harness-spec/docs/hooks/: thin-hooks.md
v2/harness/integrations/: input_router.py  slack.py  slack_bot.py
v2/harness/models/: config.py
v2/harness/providers/: base.py  openrouter.py  stub.py
v2/harness/tools/: audit.py  browser.py  budget.py  codebase_map.py  dispatcher.py  exec_cmd.py  file_ops.py  mutations.py  permissions.py  search.py
v2/specs/: prd.md
v2/tests/: test_e2e_pipeline.py  test_exec_background.py
(+16 files in other folders)
