[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness"
version = "0.1.0"
description = "Multi-agent AI workflow harness"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mem0 = [
    "mem0ai>=2.0",
]

[project.scripts]
harness = "harness.cli:main"
yoonie = "harness.cli:main"
yn = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
